--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -41,12 +41,12 @@ layout: default
     <div class="clearfix">{{ content }}</div>
 
     <!-- News -->
-    {% if page.news and site.announcements.enabled %}
+    <!-- {% if page.news and site.announcements.enabled %}
       <h2>
         <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
       </h2>
       {% include news.liquid limit=true %}
-    {% endif %}
+    {% endif %} -->
 
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
@@ -57,20 +57,20 @@ layout: default
     {% endif %}
 
     <!-- Selected papers -->
-    {% if page.selected_papers %}
+    <!-- {% if page.selected_papers %}
       <h2>
         <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
       </h2>
       {% include selected_papers.liquid %}
-    {% endif %}
+    {% endif %}-->
 
     <!-- Social -->
-    {% if page.social %}
+    <!--{% if page.social %}
       <div class="social">
         <div class="contact-icons">{% include social.liquid %}</div>
 
         <div class="contact-note">{{ site.contact_note }}</div>
       </div>
-    {% endif %}
+    {% endif %}-->
   </article>
 </div>
