--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -57,7 +57,7 @@
           </li>
 
           <!-- Other pages -->
-          {% assign sorted_pages = site.pages | sort: 'nav_order' %}
+          <!--{% assign sorted_pages = site.pages | sort: 'nav_order' %}
           {% for p in sorted_pages %}
             {% if p.nav and p.autogen == null %}
               {% if p.dropdown %}
@@ -106,7 +106,7 @@
                 </li>
               {% endif %}
             {% endif %}
-          {% endfor %}
+          {% endfor %}-->
           {% if site.enable_darkmode %}
             <!-- Toogle theme mode -->
             <li class="toggle-container">
